--- a/app/views/images/new.html.haml
+++ b/app/views/images/new.html.haml
@@ -1,6 +1,7 @@
 .page-new-images
-  = simple_form_for Image.new do |f|
+  = simple_form_for @image do |f|
     = f.input 'title', input_html: { class: 'form-control' }
+    = f.input 'name', input_html: { class: 'form-control' }
     = f.input 'url', input_html: { class: 'form-control' }
     %button.btn.btn-defualt
       = '提交'
