--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,39 +1,8 @@
 .page-home-index
-  .add-word-content
-    = link_to '添加文字描述', "/word_contents/new", :method => :get, :class => "btn btn-default add-word-content"
-  - @word_contents.each do |word_content|
-    .title
-      = word_content.title
-    .content
-      = word_content.content
-  .add-img
-    = link_to '添加图片', "/images/new", :method => :get, :class => "btn btn-default add-image"
-  .choice-img
-    = link_to '选择图片', "/ppt_images/new", :method => :get, :class => "btn btn-default choice-image"
-    .img-choiced
-    已选择图片
-    - @ppt_images.each do |ppt_image|
-      - ppt_image.image.each do |image|
-        .img-title
-          = image.title
-          = image.name
-        .img
-          = image_tag(image.name)
-    / - @img = MiniMagick::Image.new("http://tse1.mm.bing.net/th?&id=OIP.Mdf244f261ef3c59dd59e1a73dacd2d3eo0&w=300&h=300&c=0&pid=1.9&rs=0&p=0")
-    - @img = MiniMagick::Image.open("http://tse1.mm.bing.net/th?&id=OIP.Mdf244f261ef3c59dd59e1a73dacd2d3eo0&w=300&h=300&c=0&pid=1.9&rs=0&p=0")
-    - @img.resize "1600x900"
-    - @img.contrast
-    - @img.write("from_internets.jpg")
-  .tip
-    选择图片之后，再点击“输入ppt名称”，创建ppt文件
-  .save_where
-    = link_to '输入ppt名称', "/file_names/new", :method => :get, :class => "btn btn-default get-file-name"
-    - @file_names.each do |file|
-      .download-file
-        已生成ppt文件
-        = file.name
-        = link_to '下载', "/file_names/#{file.id}/download", :method => :get, :class => "btn btn-default download-file"
-        = link_to '删除', "/file_names/#{file.id}", :method => :delete, :class => "btn btn-default delete-file"
+  = link_to '图片列表', "/images", :method => :get, :class => "btn btn-default add-image"
+  = link_to 'ppt列表', "/ppts", :method => :get, :class => "btn btn-default choice-image"
+
+
 
 
 
