--- a/app/views/ppts/new.html.haml
+++ b/app/views/ppts/new.html.haml
@@ -1,5 +1,6 @@
 .page-new-files
   = simple_form_for @ppt do |f|
     = f.input 'title', input_html: { class: 'form-control' }
+    = f.input 'pptx', input_html: { class: 'form-control' }
     %button.btn.btn-defualt
       = '提交'
