将模型改为ppt与image多对多关联

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -2,7 +2,7 @@
   = link_to '图片列表', "/images", :method => :get, :class => "btn btn-default add-image"
   = link_to 'ppt列表', "/ppts", :method => :get, :class => "btn btn-default choice-image"
   .create-ppt
-    = link_to '创建一个空白的ppt', "/ppts/new", :method => :get, :class => "btn btn-default create-ppt"
+    = link_to '创建一个新的ppt', "/ppts/new", :method => :get, :class => "btn btn-default create-ppt"
 
 
 
