--- a/app/views/images/index.html.haml
+++ b/app/views/images/index.html.haml
@@ -1,7 +1,7 @@
 .page-imgae-index
   内置图片列表
   .create-ppt
-    = link_to '创建一个空白的ppt', "/ppts/new", :method => :get, :class => "btn btn-default create-ppt"
+    = link_to '创建一个新的ppt', "/ppts/new", :method => :get, :class => "btn btn-default create-ppt"
   = link_to '继续添加图片', "/images/new", :method => :get, :class => "btn btn-default add-image"
   - @images.each do |image|
     = render :partial => "/images/image_li", :locals => {:image => image}
