--- a/app/views/ppts/edit.html.haml
+++ b/app/views/ppts/edit.html.haml
@@ -1,4 +1,4 @@
-.page-new-files
+.page-edit-files
   = simple_form_for @ppt do |f|
     = f.input 'title', input_html: { class: 'form-control' }
     = f.input 'pptx', as: :hidden, input_html: { class: 'form-control'}
