--- a/app/views/ppts/index.html.haml
+++ b/app/views/ppts/index.html.haml
@@ -1,18 +1,11 @@
 .page-ppt-index
   - @ppts.each do |ppt|
-    - if ppt.ppt_images.blank?
-      .unable-doenload-ppt
-        空的ppt文件
-        = ppt.title
-        = link_to '添加图片', "/ppts/#{ppt.id}/ppt_images/new", :method => :get, :class => "btn btn-default choice-image"
-        = link_to '删除', "/ppts/#{ppt.id}", :method => :delete, :class => "btn btn-default delete-ppt"
-    - else
-      .download-ppt
-        可下载ppt文件
-        = ppt.title
-        = link_to '添加图片', "/ppts/#{ppt.id}/ppt_images/new", :method => :get, :class => "btn btn-default choice-image"
-        = link_to '查看已选择图片',"/ppts/#{ppt.id}", :method => :get, :class => "btn btn-default show-ppt-images"
-        = link_to '下载', "/ppts/#{ppt.id}/download", :method => :get, :class => "btn btn-default download-ppt"
-        = link_to '删除', "/ppts/#{ppt.id}", :method => :delete, :class => "btn btn-default delete-ppt"
+    .download-ppt
+      可下载ppt文件
+      = ppt.title
+      = link_to '添加图片', "/ppts/#{ppt.id}/ppt_images/new", :method => :get, :class => "btn btn-default choice-image"
+      = link_to '查看已选择图片',"/ppts/#{ppt.id}", :method => :get, :class => "btn btn-default show-ppt-images"
+      = link_to '下载', "/ppts/#{ppt.id}/download", :method => :get, :class => "btn btn-default download-ppt"
+      = link_to '删除', "/ppts/#{ppt.id}", :method => :delete, :class => "btn btn-default delete-ppt"
   .create-ppt
-    = link_to '创建一个空白的ppt', "/ppts/new", :method => :get, :class => "btn btn-default create-ppt"
+    = link_to '创建一个新的ppt', "/ppts/new", :method => :get, :class => "btn btn-default create-ppt"
