--- a/app/views/ppts/show.html.haml
+++ b/app/views/ppts/show.html.haml
@@ -1,11 +1,11 @@
 .page-ppt-show
   .img-choiced
   已选择图片
-  - @ppt.ppt_images.each do |ppt_image|
-    - ppt_image.images.each do |image|
-      .img-title
-        = image.title
-      .img
-        = image_tag(image.title)
-  = link_to '添加图片', "/ppts/#{@ppt.id}/ppt_images/new", :method => :get, :class => "btn btn-default choice-image"
+  - @ppt.images.each do |image|
+    .img-title
+      = image.title
+    .img
+      = image_tag(image.title)
+  = link_to '添加图片', "/ppts/#{@ppt.id}/edit", :method => :get, :class => "btn btn-default choice-image"
+  = link_to '图片列表', "/images", :method => :get, :class => "btn btn-default add-image"
   = link_to '去下载', "/ppts", :method => :get, :class => "btn btn-default"
