--- a/app/views/ppts/show.html.haml
+++ b/app/views/ppts/show.html.haml
@@ -5,7 +5,7 @@
     .img-title
       = image.title
     .img
-      = image_tag(image.title)
+      = image_tag(image.url)
   = link_to '添加图片', "/ppts/#{@ppt.id}/edit", :method => :get, :class => "btn btn-default choice-image"
   = link_to '图片列表', "/images", :method => :get, :class => "btn btn-default add-image"
   = link_to '去下载', "/ppts", :method => :get, :class => "btn btn-default"
