--- a/app/views/images/_image_li.html.haml
+++ b/app/views/images/_image_li.html.haml
@@ -1,3 +1,4 @@
 %li.image
   = image.title
   = image_tag(image.url)
+  = link_to "删除", "/images/#{image.id}", :method => :delete, :class => "btn btn-default delete-img"
