--- a/app/views/ppts/index.html.haml
+++ b/app/views/ppts/index.html.haml
@@ -1,13 +1,19 @@
 .page-ppt-index
   - @ppts.each do |ppt|
     .download-ppt
-      可下载ppt文件
       = ppt.title
       = link_to '添加图片', "/ppts/#{ppt.id}/edit", :method => :get, :class => "btn btn-default choice-image"
       = link_to '查看已选择图片',"/ppts/#{ppt.id}", :method => :get, :class => "btn btn-default show-ppt-images"
-      = link_to '下载', "/ppts/#{ppt.id}/download", :method => :get, :class => "btn btn-default download-ppt"
+      - if ppt.status == "convert_fail"
+        = "转码失败"
+        = link_to '重新转码', "/ppts/#{ppt.id}/edit", :method => :get, :class => "btn btn-default"
+      - if ppt.status == "converting" || ppt.status == "edit"
+        = "正在将图片转码成ppt。。。。"
+        = link_to '刷新', "/ppts", :method => :get, :class => "btn btn-default"
+      - if ppt.status == "convert_success"
+        = link_to '下载', "/ppts/#{ppt.id}/download", :method => :get, :class => "btn btn-default download-ppt"
       = link_to '删除', "/ppts/#{ppt.id}", :method => :delete, :class => "btn btn-default delete-ppt"
   .create-ppt
     = link_to '创建一个新的ppt', "/ppts/new", :method => :get, :class => "btn btn-default create-ppt"
   .back-to-home-index
-    = link_to '回到首页', "/home/index", :method => :get, :class => "btn btn-default"
+    = link_to '回到首页', "/", :method => :get, :class => "btn btn-default"
