--- a/app/assets/stylesheets/ui.scss
+++ b/app/assets/stylesheets/ui.scss
@@ -6,3 +6,210 @@ body {
   font-family: "Segoe UI", "Helvetica Neue", "Helvetica", "Arial", "sans-serif", "微软雅黑";
   color: #444;
 }
+
+.page-home-index{
+  .image-table{
+    text-align: center;
+    list-style: none;
+    margin: 20px 0 20px 0;
+    padding: 20;
+  }
+
+  .ppt-table{
+    text-align: center;
+    list-style: none;
+    margin: 20px 0 20px 0;
+    padding: 20;
+  }
+
+  .create-ppt{
+    text-align: center;
+    list-style: none;
+    margin: 20px 0 20px 0;
+    padding: 20;
+  }
+}
+
+.page-imgae-index{
+  .table-name{
+     text-align: center;
+  }
+  .create-ppt{
+    text-align: center;
+    list-style: none;
+    margin: 20px 0 20px 0;
+    padding: 20;
+    float: none;
+  }
+
+  .add-image{
+    text-align: center;
+    list-style: none;
+    margin: 20px 0 20px 0;
+    padding: 20;
+  }
+
+  .back-to-home-index{
+    text-align: center;
+    list-style: none;
+    margin: 20px 0 20px 0;
+    padding: 0;
+  }
+
+  ul.images{
+    list-style: none;
+    margin: 20px 0 20px 0;
+    padding: 0;
+
+    li.image{
+      border-bottom: 1px solid #eee;
+      @include clearfix;
+      margin: 0;
+      padding: 10px;
+
+      .image-title{
+        margin-right: 10px;
+        text-align: center;
+        float: left;
+        width: 40px;
+        font: 13px;
+      }
+
+      .image-view{
+        margin-right: 10px;
+        text-align: center;
+        float: left;
+        width: 1200px;
+      }
+
+      .image-delete{
+        margin-right: 10px;
+        text-align: center;
+        float: left;
+        width: 40px;
+        font: 13px;
+      }
+    }
+  }
+}
+
+.page-ppt-index{
+  .table-name{
+    text-align: center;
+  }
+
+  ul.ppts{
+    list-style: none;
+    margin: 20px 0 20px 0;
+    padding: 0;
+
+    li.ppt{
+      border-bottom: 1px solid #eee;
+      @include clearfix;
+      margin: 0;
+      padding: 10px;
+
+      .ppt-title{
+        margin-right: 10px;
+        float: left;
+        width: 60px;
+        font: 13px;
+      }
+
+      .add-image{
+        margin-right: 10px;
+        float: left;
+        width: 100px;
+        font: 13px;
+      }
+
+      .show-ppt-image{
+        margin-right: 10px;
+        float: left;
+        width: 150px;
+        font: 13px;
+      }
+
+      .download-ppt{
+        margin-right: 10px;
+        float: left;
+        width: 200px;
+        font: 13px;
+      }
+
+      .delete-ppt{
+        margin-right: 10px;
+        float: left;
+        width: 100px;
+        font: 13px;
+      }
+    }
+  }
+
+  .create-ppt{
+    list-style: none;
+    margin: 20px 0 20px 0;
+    padding: 20;
+  }
+
+  .back-to-home-index{
+    list-style: none;
+    margin: 20px 0 20px 0;
+    padding: 20;
+  }
+}
+
+.page-ppt-show{
+  .table-name{
+     text-align: center;
+  }
+  .choice-image{
+    text-align: center;
+    list-style: none;
+    margin: 20px 0 20px 0;
+    padding: 20;
+    float: none;
+  }
+
+  .ppt-download{
+    text-align: center;
+    list-style: none;
+    margin: 20px 0 20px 0;
+    padding: 20;
+  }
+
+  .all-image-view{
+    text-align: center;
+    list-style: none;
+    margin: 20px 0 20px 0;
+    padding: 0;
+  }
+
+  ul.img{
+    list-style: none;
+    margin: 20px 0 20px 0;
+    padding: 0;
+
+    li.img{
+      border-bottom: 1px solid #eee;
+      @include clearfix;
+      margin: 0;
+      padding: 10px;
+
+      .img-title{
+        margin-right: 10px;
+        text-align: center;
+        float: left;
+        width: 40px;
+        font: 13px;
+      }
+
+      .img-view{
+        margin-right: 10px;
+        text-align: center;
+        float: left;
+        width: 1200px;
+      }
+    }
+  }
+}
