--- a/app/views/images/_image_li.html.haml
+++ b/app/views/images/_image_li.html.haml
@@ -1,4 +1,7 @@
 %li.image
-  = image.title
-  = image_tag(image.url)
-  = link_to "删除", "/images/#{image.id}", :method => :delete, :class => "btn btn-default delete-img"
+  .image-title
+    = image.title
+  .image-view
+    = image_tag(image.url)
+  .image-delete
+    = link_to "删除", "/images/#{image.id}", :method => :delete, :class => "btn btn-default delete-img"
