--- a/app/views/images/index.html.haml
+++ b/app/views/images/index.html.haml
@@ -1,9 +1,12 @@
 .page-imgae-index
-  内置图片列表
+  .table-name
+    内置图片列表
   .create-ppt
     = link_to '创建一个新的ppt', "/ppts/new", :method => :get, :class => "btn btn-default create-ppt"
-  = link_to '继续添加图片', "/images/new", :method => :get, :class => "btn btn-default add-image"
+  .add-image
+    = link_to '继续添加图片', "/images/new", :method => :get, :class => "btn btn-default add-image"
   .back-to-home-index
     = link_to '回到首页', "/", :method => :get, :class => "btn btn-default"
-  - @images.each do |image|
-    = render :partial => "/images/image_li", :locals => {:image => image}
+  %ul.images
+    - @images.each do |image|
+      = render :partial => "/images/image_li", :locals => {:image => image}
