--- a/app/assets/stylesheets/ui.scss
+++ b/app/assets/stylesheets/ui.scss
@@ -32,7 +32,9 @@ body {
 
 .page-imgae-index{
   .table-name{
-     text-align: center;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 700;
   }
   .create-ppt{
     text-align: center;
@@ -47,13 +49,6 @@ body {
     list-style: none;
     margin: 20px 0 20px 0;
     padding: 20;
-  }
-
-  .back-to-home-index{
-    text-align: center;
-    list-style: none;
-    margin: 20px 0 20px 0;
-    padding: 0;
   }
 
   ul.images{
@@ -79,7 +74,7 @@ body {
         margin-right: 10px;
         text-align: center;
         float: left;
-        width: 1200px;
+        width: 1000px;
       }
 
       .image-delete{
@@ -96,6 +91,8 @@ body {
 .page-ppt-index{
   .table-name{
     text-align: center;
+    font-size: 20px;
+    font-weight: 700;
   }
 
   ul.ppts{
@@ -151,17 +148,13 @@ body {
     margin: 20px 0 20px 0;
     padding: 20;
   }
-
-  .back-to-home-index{
-    list-style: none;
-    margin: 20px 0 20px 0;
-    padding: 20;
-  }
 }
 
 .page-ppt-show{
   .table-name{
      text-align: center;
+     font-size: 20px;
+     font-weight: 700;
   }
   .choice-image{
     text-align: center;
