--- a/app/assets/stylesheets/ui.scss
+++ b/app/assets/stylesheets/ui.scss
@@ -5,6 +5,25 @@ body {
   background-color: #fafafa;
   font-family: "Segoe UI", "Helvetica Neue", "Helvetica", "Arial", "sans-serif", "微软雅黑";
   color: #444;
+
+  ul.nav.navbar-nav.navbar-left{
+    text-align: center;
+    list-style: none;
+    margin: 20px 0 20px 0;
+    padding: 0;
+
+    li{
+      border-bottom: 0px solid #eee;
+      margin: 0;
+      padding: 10px;
+
+      a{
+        margin-right: 200px;
+        text-align: center;
+        font-size: 30px;
+      }
+    }
+  }
 }
 
 .page-home-index{
@@ -45,7 +64,7 @@ body {
   }
 
   .add-image{
-    text-align: center;
+    // text-align: center;
     list-style: none;
     margin: 20px 0 20px 0;
     padding: 20;
@@ -89,6 +108,8 @@ body {
 }
 
 .page-ppt-index{
+   float: center;
+
   .table-name{
     text-align: center;
     font-size: 20px;
@@ -128,7 +149,7 @@ body {
       }
 
       .download-ppt{
-        margin-right: 10px;
+        margin-right: 40px;
         float: left;
         width: 200px;
         font: 13px;
