--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,9 +6,15 @@
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
     = csrf_meta_tags
   %body
-    %nav.navbar.navbar-inverse
-      %ul.nav.navbar-nav.navbar-left
-        %li
-          %a{:href => '/', :data => {:method => :get}} 回到首页
+    .container
+      .col-md-12
+        %nav.navbar.navbar-inverse
+          %ul.nav.navbar-nav.navbar-left
+            %li
+              %a{:href => '/ppts', :data => {:method => :get}} ppt转换
+            %li
+              %a{:href => '/images', :data => {:method => :get}} 图片管理
+            %li
+              %a{:href => '/ppts', :data => {:method => :get}} ppt管理
     .container
       = yield
