--- a/app/views/ppts/index.html.haml
+++ b/app/views/ppts/index.html.haml
@@ -1,14 +1,17 @@
 .page-ppt-index.container
+  .col-md-2
   .col-md-8
     .table-name
       ppt列表
+    .create-ppt
+      = link_to '生成ppt', "/ppts/new", :method => :get, :class => "btn btn-default create-ppt"
     %ul.ppts
       - @ppts.each do |ppt|
         %li.ppt
           .ppt-title
             = ppt.title
           .add-image
-            = link_to '添加图片', "/ppts/#{ppt.id}/edit", :method => :get, :class => "btn btn-default"
+            = link_to '修改ppt', "/ppts/#{ppt.id}/edit", :method => :get, :class => "btn btn-default"
           .show-ppt-image
             = link_to '查看已选择图片',"/ppts/#{ppt.id}", :method => :get, :class => "btn btn-default show-ppt-images"
           .download-ppt
@@ -22,5 +25,5 @@
               = link_to '下载', "/ppts/#{ppt.id}/download", :method => :get, :class => "btn btn-default download-ppt"
           .delete-ppt
             = link_to '删除', "/ppts/#{ppt.id}", :method => :delete, :class => "btn btn-default delete-ppt"
-    .create-ppt
-      = link_to '创建一个新的ppt', "/ppts/new", :method => :get, :class => "btn btn-default create-ppt"
+  .col-md-2
+
